--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>AI 全家桶 - 桌面版</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="../AI-Aplication/images/icon48.png">
+    <link rel="icon" href="images/icon48.png">
 </head>
 <body>
     <!-- 桌面视图 (Launcher) -->
